# robot-action-representation

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: check_checkpoint.py  make_gif.py  train_arbet.py  visualize_pusht.py  visualize_rollouts.py
src/: adaln_transformer.py  scribe_dataset.py  scribe_tokenizer.py
src/lerobot-policy-arbet/: pyproject.toml
src/lerobot-policy-arbet/lerobot_policy_arbet/: __init__.py  configuration_arbet.py  modeling_arbet.py  processor_arbet.py
tests/: test_adaln_transformer.py  test_scribe_dataset.py  test_scribe_tokenizer.py
tests/lerobot_policy_arbet/: test_configuration_arbet.py  test_modeling_arbet.py  test_processor_arbet.py
