[project]
name = "robot-action-representation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gym-pusht>=0.1.6",
    "lerobot",
    "lerobot-policy-arbet",
    "lerobot-policy-ditflow",
    "matplotlib>=3.10.8",
    "pymunk<7",
    "rerun-sdk>=0.26.2",
    "tokink>=0.1.1",
]

[tool.uv.sources]
lerobot-policy-arbet = { path = "src/lerobot-policy-arbet", editable = true }
lerobot-policy-ditflow = { path = "vendor/lerobot-policy-ditflow", editable = true }

[dependency-groups]
dev = ["pre-commit>=4.5.1", "pytest>=9.0.2", "ruff>=0.15.6"]

[tool.pyright]
extraPaths = ["src/lerobot-policy-arbet", "vendor/lerobot-policy-ditflow"]
ignore = ["vendor"]                                                        # vendored code; PyTorch/HF types don't pass static analysis

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "RUF", # ruff-specific rules
]

[tool.pytest.ini_options]
pythonpath = ["src"]
filterwarnings = [
    "ignore:Unexpected token:UserWarning:tokink", # randomly-initialized model may emit BOS mid-sequence
]
